--- a/ATV2_CSS/ex4/style.css
+++ b/ATV2_CSS/ex4/style.css
@@ -13,33 +13,33 @@ span {
   border-radius: 100%;
   box-shadow: 3px 3px 3px rgba(153, 51, 153, 0.5);
 }
-#id1>span:first-child{
+#id1:hover>span:first-child{
     background-color: red;
 }
-#id2>span:last-child{    
+#id2:hover>span:last-child{    
     background-color: green;
 }
-#id3>span:nth-child(2){
+#id3:hover>span:nth-child(2){
 	background-color: blue;
 }
-#id4>span:nth-child(5){
+#id4:hover>span:nth-child(5){
     background-color: pink;
 }
-#id5>span:nth-child(odd){
+#id5:hover>span:nth-child(odd){
     background-color: yellow;
 }
-#id6>span:nth-child(even){
+#id6:hover>span:nth-child(even){
     background-color: orange;
 }
-#id7>span:nth-child(4){
+#id7:hover>span:nth-child(4){
     background-color:lightpink;
 }
-#id8>span:nth-child(3n+2){
+#id8:hover>span:nth-child(3n+2){
     background-color: darkred;
 }
-#id9>span:nth-child(3n+1){
+#id9:hover>span:nth-child(3n+1){
     background-color: gray;
 }
-#id10>span:nth-child(n+4){
+#id10:hover>span:nth-child(n+4){
     background-color: indigo;
 }
