--- a/ATV_JS/Questao10/style.css
+++ b/ATV_JS/Questao10/style.css
@@ -1,39 +1,73 @@
-*{
-    margin: 1px;
-    padding: 0px;
-
-}
-.display{
-    margin: 10px;
-    display: flex;
-    border: 1px solid black;
-    height: 30pt;
-    width: 80vw;
-    justify-content: flex-end;
-
-    
-}
-.container{
+body {
     display: flex;
     flex-direction: column;
-    
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-color: #f5f5f5;
+    font-family: Arial, sans-serif;
 }
-.input{
-    font-size: 30pt;
+
+.calculator {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-.button{
-    margin: 10px;
+
+.calculator-display {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 50px;
+    background-color: #eee;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.calculator-buttons {
     display: grid;
-    width: 80vw;
-    height: 80vh;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
 }
-.tecla{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30pt;
-    box-shadow: 0px 0px 5px 5px rgba(200,200,200,0.9);
+
+.calculator-button {
+    width: 60px;
+    height: 60px;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.calculator-button:hover {
+    background-color: #e0e0e0;
+}
+
+.calculator-button:active {
+    background-color: #d3d3d3;
+}
+
+.calculator-button.operation {
+    background-color: #ff9500;
+    color: #fff;
+}
+
+.calculator-button.operation:hover {
+    background-color: #ffad33;
+}
+
+.calculator-button.operation:active {
+    background-color: #ffbf55;
+}
+#limpar{
+    margin-top: 5px;
+    width: 50vw;
 }
