--- a/LogBanco/sing.css
+++ b/LogBanco/sing.css
@@ -1,55 +1,63 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f1f1f1;
+    background-color: #547acc;
     padding: 20px;
-}
-
-.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+  }
+  
+  .container {
     max-width: 500px;
+    height: 100%;
     margin: 0 auto;
-    background-color: #fff;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  }
+  
+  h1 {
     text-align: center;
-}
-
-form {
+  }
+  
+  form {
     margin-top: 20px;
-}
-
-label {
+  }
+  
+  label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-}
-
-input[type="text"],
-input[type="password"] {
+  }
+  
+  input[type="text"],
+  input[type="password"],
+  input[type="number_format"] {
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
+    margin-right: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
-}
-
-input[type="submit"] {
+  }
+  
+  input[type="submit"] {
     background-color: #4caf50;
     color: #fff;
     padding: 10px 20px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
-}
-
-input[type="submit"]:hover {
+  }
+  
+  input[type="submit"]:hover {
     background-color: #45a049;
-}
-
-.error {
+  }
+  
+  .error {
     color: red;
     margin-top: 10px;
-}
+  }
+  
